After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 780569 - mpdparser: Report error if Representation is invalid
mpdparser: Report error if Representation is invalid
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal normal
: 1.11.91
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-03-27 00:59 UTC by Seungha Yang
Modified: 2017-04-09 07:59 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
mpdparser: Report error if Representation is invalid (16.86 KB, patch)
2017-03-27 01:00 UTC, Seungha Yang
committed Details | Review

Description Seungha Yang 2017-03-27 00:59:14 UTC
Spec "5.3.5 Representation" is saying that
id and bandwidth attributes are mandatory fields.
Comment 1 Seungha Yang 2017-03-27 01:00:20 UTC
Created attachment 348758 [details] [review]
mpdparser: Report error if Representation is invalid
Comment 2 Sebastian Dröge (slomo) 2017-04-09 07:58:55 UTC
Attachment 348758 [details] pushed as a3a12d0 - mpdparser: Report error if Representation is invalid